--- a/超高频经典题.md
+++ b/超高频经典题.md
@@ -1,14 +1,14 @@
 # Warm up
-- Longest Palindromic Substring
+- **Longest Palindromic Substring**
 
 # BFS
-- Number of Islands
+- **Number of Islands**
 - Binary Tree Level Order Traversal
-- Course Schedule
+- **Course Schedule**
 - Clone Graph
 - Serialize and Deserialize Binary Tree
 - Word Ladder
-- Graph Valid Tree
+- **Graph Valid Tree**
 
 # Binary Search
 - Sqrt(x)
@@ -23,16 +23,16 @@
 # Binary Tree - Divide Conquer & Traverse
 - Lowest Common Ancestor of a BST/BT
 - Closest BST Value
-- Validate BST
+- **Validate BST**
 - Path Sum
 - Maximum / Minimum Depth of BT
-- BT Inorder/Inorder/Postorder Traversal (非递归)
+- BT **Inorder**/Preorder/Postorder Traversal (非递归)
 
 # Two Pointers, LinkedList
 - 3Sum
 - Triangle Count
 - Middle of Linked List
-- Reverse Linked List
+- **Reverse Linked List**
 - Intersection of Two Linked Lists
 - Linked List Cycle
 - Move Zeroes
@@ -42,25 +42,25 @@
 - Combination Sum I & II
 - Permutations I & II
 - Subsets I & II
-- Generate Parentheses
+- **Generate Parentheses**
 - Letter Combinations of a Phone Number
 
 # Hash & Heap
-- LRU Cache
-- Insert Delete GetRandom O(1)
+- **LRU Cache**
+- **Insert Delete GetRandom O(1)**
 - K Closest Points
 - Merge K Sorted Lists
 - Merge K Sorted Arrays
 
 # DFS
-- Word Break i & II
+- **Word Break I** & II
 - Wildcard Matching
 - Regular Expression Matching
 
 # DP
 - Maximum Subarray
 - Unique Paths I & II
-- Climbing Stairs
+- **Climbing Stairs**
 - Longest Increasing Subsequence
 - Paint House
 - Best Time to Buy and Sell Stock
